--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,11 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    image: redis:6
+    networks:
+      - backend
+
   auth-service:
     build: ./auth-service
     ports:
